--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,7 @@
+
 <resources>
     <string name="app_name">newgps</string>
     <string name="start">Start</string>
     <string name="stop">Stop</string>
+    <string name="balloon_button">気球位置</string>
 </resources>
