--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,6 @@
     <string name="start">Start</string>
     <string name="stop">Stop</string>
     <string name="balloon_button">気球位置</string>
+    <string name="testbutton">testbutton</string>
+
 </resources>
