--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 
 <resources>
-    <string name="app_name">newgps</string>
+    <string name="app_name">appDirGPSV</string>
     <string name="start">Start</string>
     <string name="stop">Stop</string>
     <string name="balloon_button">気球位置</string>
